--- a/_config.yml
+++ b/_config.yml
@@ -33,6 +33,8 @@ social:
     url: http://github.com/weidenfreak
   - title: twitter
     url: http://twitter.com/weidenfreak
+  - title: instagram
+    url: https://www.instagram.com/winter.in.umea/
 
 # Postal address (add as many lines as necessary)
 address:
